@@ -18,16 +18,10 @@ dependencies {
 
 tasks.named("test") {
     systemProperty "package.definition", "true"
-    if ((JavaVersion.current().majorVersion as int) < 24) {
-        jvmArgs += ["-Djava.security.manager=allow"]
-    }
 }
 
 tasks.named("nativeTest") {
     runtimeArgs.add("-Dpackage.definition=true")
-    if ((JavaVersion.current().majorVersion as int) < 24) {
-        runtimeArgs.add("-Djava.security.manager=allow")
-    }
 }
 
 graalvmNative {
